--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -8,4 +8,23 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/bootstrap/css/amelia.bootstrap.min.css')
   body
+    .navbar.navbar-default.navbar-fixed-top
+      .container
+        .navbar-header
+          a.navbar-brand(href='/') Loc8r
+          button.navbar-toggle(type='button', data-toggle='collape', data-target='#navbar-main')
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+        #navbar-main.navbar-collapse.collapse
+          ul.nav.navbar-nav
+            li
+              a(href='/about/') About
+  .container
     block content
+    
+    
+    footer
+      .row
+        .col-xs-12
+          small &copy; Simon Holmes 2014
